buildscript {
    ext.kotlin_version = '1.2.51'
    ext.shadow_version = '2.0.4'
    repositories {
        maven {
            url 'https://plugins.gradle.org/m2/'
            mavenCentral()
        }
    }
    dependencies {
        classpath 'io.franzbecker:gradle-lombok:1.14'
        classpath "com.github.jengelman.gradle.plugins:shadow:$shadow_version"
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
    }
}

allprojects {
    ext {
        jdaVersion = "3.8.0_425"
    }

    repositories {
        jcenter()
        mavenCentral()
        maven { url "https://jcenter.bintray.com" }
        maven { url "https://dl.bintray.com/gabixdev/kyoko" }
        maven { url "https://dl.bintray.com/samophis/maven" }
        maven { url "http://www.atilika.org/nexus/content/repositories/atilika" }
        maven { url "http://repo.maven.apache.org/maven2" }
        maven { url "https://jitpack.io" }
    }
    apply plugin: 'kotlin'
    apply plugin: 'idea'
    apply plugin: 'java'
    apply plugin: 'com.github.johnrengelman.shadow'
    apply plugin: 'io.franzbecker.gradle-lombok'
    group = 'moe.kyokobot'
    //version = '2.0.0-SNAPSHOT'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    compileJava.options.encoding = 'UTF-8'

    lombok {
        version = "1.18.2"
    }
}

subprojects {
    apply plugin: 'kotlin'
    apply plugin: 'idea'
    apply plugin: 'java'
    apply plugin: 'com.github.johnrengelman.shadow'
    apply plugin: 'io.franzbecker.gradle-lombok'

    group = 'moe.kyokobot'
    //version = '2.0.0-SNAPSHOT'
    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    compileKotlin {
        kotlinOptions.jvmTarget = '1.8'
    }

    lombok {
        version = "1.18.2"
    }
}